@@ -4,3 +4,5 @@ libmath_la_SOURCES = matrix3x3.cpp vector3.cpp
 libmathincludedir = $(includedir)/openbabel/math
 libmathinclude_HEADERS = \
 	matrix3x3.h vector3.h
+
+AM_CPPFLAGS = -I$(top_srcdir)/src
